<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp"
    android:clickable="true"
    android:focusable="true"
    android:background="?attr/selectableItemBackground"
    android:layout_marginBottom="5dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:src="@drawable/folder_icon"
        android:contentDescription="@string/image"
        android:tint="@color/primary_text"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:paddingHorizontal="2dp">
        
        <TextView
            android:id="@+id/videoName"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/video_name"
            android:textColor="@color/primary_text"
            android:gravity="center_vertical"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/FolderNameFV"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/folder_name"
            android:textColor="@color/primary_text"
            android:gravity="center_vertical"
            android:maxLines="1"/>
        
    </LinearLayout>
    
    <TextView
        android:id="@+id/FolderName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/primary_text"
        android:text="@string/folder_name"
        android:textSize="18sp"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="5dp"/>

</LinearLayout>